--- a/src/Components/LoginSingin/LiginSingup.css
+++ b/src/Components/LoginSingin/LiginSingup.css
@@ -1,6 +1,100 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-top: 200px;
+    width: 600px;
+    background-color: #fff;
+    padding-bottom: 30px;
+}
 
+.header{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 9px;
+    width: 100%;
+    margin-top: 30px;
+}
 
+.text{
+    color: powderblue;
+    font-size: 48px;
+    font-weight: 700;
+}
+.underline{
+    width: 62px;
+    height: 6px;
+    background: yellow;
+    border-radius: 9px;
+}
+.inputs{
+    margin-top: 55 px;
+    display: flex;
+    flex-direction: column;
+    gap:25px;
+}
 .input img{
     width: 20px;
     height: 20px;
+}
+
+.input{
+    display: flex;
+    align-items: center;
+    margin: auto;
+    width: 480px;
+    height: 80px;
+    background-color: gray;
+    border-radius: 6px;
+}
+
+.input img{
+    margin: 0px 30px;
+}
+
+.input input{
+    height: 50px;
+    width: 400px;
+    background: transparent;
+    border: none;
+    outline: #797979;
+    font-size: 19px;
+}
+
+.forgot-password{
+    padding-left: 62px;
+    margin-top: 27px;
+    color: #797979;
+    font-size: 18px;
+}
+
+.forgot-password span{
+    color : navy;
+    cursor: pointer;
+}
+
+.submit-container{
+    display: flex;
+    gap:30px;
+    margin: 60px auto;
+}
+
+.submit{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 230px;
+    height: 60px;
+    color: #fff;
+    background-color: #4c00b4;
+    border-radius: 50px;
+    font-size: 19px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.gray{
+    background: #EAEAEA;
+    color: #676767;
 }
